--- a/index.css
+++ b/index.css
@@ -93,7 +93,7 @@ nav .navbar-nav li a:hover {
 .grad-circle img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
     border-radius: 50%;
 }
 
